samples/_failures_safe/1761346005_7d1fa4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e21e3c12.c: In function ‘main’:
./samples/SAFE/__tmp_e21e3c12.c:117:36: error: ‘input’ undeclared (first use in this function); did you mean ‘int’?
  117 |     if (input_len > 0 && hex_input[input
      |                                    ^~~~~
      |                                    int
./samples/SAFE/__tmp_e21e3c12.c:117:36: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e21e3c12.c:117:41: error: expected ‘]’ at end of input
  117 |     if (input_len > 0 && hex_input[input
      |                                         ^
      |                                         ]
./samples/SAFE/__tmp_e21e3c12.c:117:5: error: expected declaration or statement at end of input
  117 |     if (input_len > 0 && hex_input[input
      |     ^~
